Revisão de texto

--- a/olist_analysis/src/Olist_Market_Analysis.ipynb
+++ b/olist_analysis/src/Olist_Market_Analysis.ipynb
@@ -48,7 +48,7 @@
     "    <li>Para cada SR, quantos de cada lead_type a pessoa converteu?</li>\n",
     "</ol>\n",
     "<br>\n",
-    "    \n",
+    "\n",
     "---"
    ]
   },
@@ -236,7 +236,7 @@
     }
    },
    "source": [
-    "<span style=\"color:blue;font-weight:300;font-size:20px\"><b>Importando as oportunidades de negócio<br>"
+    "<span style=\"color:blue;font-weight:300;font-size:20px\"><b>Importando as oportunidades de negócio_<br>"
    ]
   },
   {
